public/_lpv23/css/common.css
/* ... */
.wrapper .btn {
    font-size: 16px;
    padding: 18px 30px 22px 30px;
    display: block;
    text-transform: uppercase;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    border-radius: 35px;
    text-align: center;
    letter-spacing: 0.5px;
    box-shadow: none;
    cursor: pointer;
    font-weight: 700;
}
.wrapper .btn.default {
    color: #ffffff;
    background-color: #83be63;
}

.wrapper .btn.default:hover {
    background-color: #8fd26a;
    color: #ffffff;
}

.wrapper .link {
    font-size: 18px;
    text-transform: uppercase;
    text-decoration: underline;
    color: #3057c4;
    font-weight: 700;
    display: inline-block;
}
.wrazpper .link:hover {
    color: #000000;
}

.wrapper .text-field {
    z-index: 2;
    position: relative;
    width: 100%;
    background-color: #ffffff;
    border: 0;
    -webkit-text-shadow: none;
    -moz-text-shadow: none;
    text-shadow: none;
    color: #1E1E25;
    padding: 14px 30px 16px 30px;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    border-radius: 35px;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    font-size: 22px;
    text-align: left;
}

.wrapper .v-center {
    width: 100%;
    position: relative;
    z-index: 3;
    margin-top: 100px;
    display: grid;
    place-items: center;
}

.wrapper .custom-radio .custom-radio-item {
    font-size: 130px;
    line-height: normal;
    font-weight: 700;
    color: #ffffff;
    display: inline-block;
    margin: 0 50px;
    cursor: pointer;
    position: relative;
    vertical-align: top;
}
.wrapper .custom-radio .custom-radio-item input[type=radio] {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    cursor: pointer;
    margin: 0;
    box-shadow: none;
    border: none;
}
.wrapper .custom-radio .custom-radio-item.yes:hover, .wrapper .custom-radio .custom-radio-item.yes.checked {
    color: #83be63;
}
.wrapper .custom-radio .custom-radio-item.no:hover, .wrapper .custom-radio .custom-radio-item.no.checked {
    color: #FB7306;
}
.wrapper .custom-radio.borderd {
    font-size: 0;
}
.wrapper .custom-radio.borderd.with-img .custom-radio-item {
    padding: 20px 10px;
    background-color: #83be63;
    border-color: transparent;
}
.wrapper .custom-radio.borderd.with-img .custom-radio-item:hover, .wrapper .custom-radio.borderd.with-img .custom-radio-item.checked {
    background-color: #8fd26a;
    border-color: transparent;
}
.wrapper .custom-radio.borderd.with-img .custom-radio-item .icon {
    width: 70px;
    height: 70px;
    display: block;
    padding: 5px;
    margin: 0 auto 10px auto;
}
.wrapper .custom-radio.borderd .custom-radio-item {
    font-size: 22px;
    line-height: 22px;
    margin: 0 15px 30px 15px;
    width: calc(50% - 30px);
    border: 1px solid #ffffff;
    padding: 12px 30px 16px 30px;
    -webkit-border-radius: 30px;
    -moz-border-radius: 30px;
    border-radius: 30px;
    font-weight: 400;
    max-width: 400px;
	background:#078041;
}
.wrapper .custom-radio.borderd .custom-radio-item:hover, .wrapper .custom-radio.borderd .custom-radio-item.checked {
    background-color: #FB7306;
    border-color: #FB7306;
    color: #ffffff;
}

.wrapper .container {
    width: 100%;
    max-width: 1100px;
    padding: 0 30px;
    margin-left: auto;
    margin-right: auto;
}
.wrapper .medium-container {
    width: 100%;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
}
.wrapper .small-container {
    width: 100%;
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
}
.wrapper .vsmall-container {
    width: 100%;
    max-width: 350px;
    margin-left: auto;
    margin-right: auto;
}

.wrapper .progress-block {
    text-align: center;
    display: none;
    position: absolute;
    top: 70px;
    left: 0;
    width: 100%;
    padding: 0 20px;
}
.wrapper .progress-block p {
    color: #ffffff;
    font-size: 14px;
    font-weight: 700;
}
.wrapper .progress {
    width: 100%;
    max-width: 500px;
    background-color: rgba(255,255,255,.1);
    padding: 5px 0;
    position: relative;
    display: inline-block;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    text-align: center;
}
.wrapper .progress .progress-bar {
    position: absolute;
    width: 0;
    max-width: 100%;
    top: 0;
    left: 0;
    height: 100%;
    background-color: #83be63;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
.wrapper .status-indicator {
    text-align: center;
    display: none;
    position: absolute;
    z-index: 1;
    top: 90px;
    left: 0;
    width: 100%;
    padding: 0 20px;
    margin-top: 30px;
}
.status-indicator .status {
    /*display: none;*/
    font-family: 'Noto Sans SC', sans-serif;
    font-size: 18px;
    font-weight: 500;
    margin-top: 10px;
}
.status-indicator .status span {
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    color: #f31d1d;
}

.status-indicator.js-good .status span {
    color: #fb7306;
}
.status-indicator.js-great .status span {
    color: #ffc104;
}
.status-indicator.js-amazing .status span {
    color: #5faa19;
}
.status-indicator.js-massive .status span {
    color: #078041;
}

.status-indicator .inner {
    width: 100%;
    max-width: 700px;
    border: 2px solid #fff;
    position: relative;
    display: block;
    margin: 0 auto;
    font-size: 0;
    text-align: center;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    border-radius: 35px;
}
/* ... */

